2005-09-09    Ping Cheng <pingc@wacom.com>
	* Supports 16 button events for all tools
	* Merged TabletPC button1 patch from Brent Baccala

2005-09-07    Ping Cheng <pingc@wacom.com>
	* Updated wacdump for Cintiq 21UX
	* Updated docs.html
	* Updated acinclude.m4 to deal with version checking, 
		such as 2.6.12.4 (Tim Jedlicka)

2005-08-18    Ping Cheng <pingc@wacom.com>
	* Merged patches for Volito2 and PL700
	* Updated wacomcpl and configure.in

2005-08-09    Ping Cheng <pingc@wacom.com>
	* Fxied a dlloader option bug (Jeremy Huddleston) 

2005-08-08    Ping Cheng <pingc@wacom.com>
	* Added --enable-dlloader configuration option
	* Cleaned Graphire wacom.c code
	* Cleaned relative Convert/revConvert X code
	* Released linuxwacom-0.6.9 as beta

2005-07-28    Ping Cheng <pingc@wacom.com>
	* Removed GTK from configure script and xidump code (Jens Georg)

2005-07-26    Ping Cheng <pingc@wacom.com>
	* Fixed a serial protocol 4 eraser/3rd button switch bug

2005-07-20    Ping Cheng <pingc@wacom.com>
	* Support x86-64 X driver
	* Fixed a Cintiq 21UX kernel bug
	* Fixed a TabletPC eraser bug

2005-06-15    Ping Cheng <pingc@wacom.com>
	* Added src/2.4.30x86-64 directory for x86-64 kernel 2.4.30

2005-06-14    Ping Cheng <pingc@wacom.com>
	* Merged with xf86Wacom.c version 1.47 at www.xfree86.org
	* Support tablet orentation rotation for all tablets
	* Support x86-64 kernel

2005-05-05    Ping Cheng <pingc@wacom.com>
	* Added 3rd party developer support pages
	* Released linuxwacom-0.6.8

2005-04-25    Ping Cheng <pingc@wacom.com>
	* Updated linuxwacom.sf.net website
	* Cleaned tablet mapping and resolution code

2005-03-28    Ping Cheng <pingc@wacom.com>
	* Updated linuxwacom.sf.net website
	* Released linuxwacom-0.6.7 as beta

2005-03-18    Ping Cheng <pingc@wacom.com>
	* Added support to kernel 2.6.11
	* Cleaned wacom_graphire_irq routine

2005-03-10    Ping Cheng <pingc@wacom.com>
	* Merged Jens' 2.6.*/Makefile.in and a few other updates
	* Added Cintiq 21UX support